# taxonomica

./: .gitignore  README.md  pyproject.toml
examples/: analyze_popularity.py  build_tree.py  compare_descriptions.py  debug_hierarchy.py  explore_archive.py  explore_gbif.py  explore_gbif_tree.py  explore_hierarchy.py  explore_taxobox.py  explore_tree.py  game_demo.py  plot_popularity_distribution.py  rank_titles.json  show_cat_description.py  taxonomica_game.py  test_redaction.py
src/taxonomica/: __init__.py  dwca.py  gbif_backbone.py  gbif_tree.py  popularity.py  redaction.py  tree.py  ui.py  wikipedia.py
utilities/: wiki_query.py
web/: app.py
web/static/: game.js  style.css
web/templates/: index.html
