[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taxonomica"
version = "0.1.0"
description = "A taxonomy-based guessing game exploring the tree of life"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Trevor Chan" }
]
keywords = ["taxonomy", "biology", "game", "darwin-core"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
web = [
    "flask>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/taxonomica"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

